@@ -1,6 +1,7 @@
 from sqlalchemy import MetaData, Column, Table, Integer, String, Text, \
     Numeric, CHAR, ForeignKey, DATETIME, TypeDecorator
 from sqlalchemy.types import NULLTYPE
+from sqlalchemy.engine.reflection import Inspector
 from alembic import autogenerate, context
 from unittest import TestCase
 from tests import staging_env, sqlite_db, clear_staging_env, eq_, \
@@ -31,7 +32,8 @@ def _model_one():
     )
 
     Table('extra', m,
-        Column("x", CHAR)
+        Column("x", CHAR),
+        Column('uid', Integer, ForeignKey('user.id'))
     )
 
     return m
@@ -192,6 +194,8 @@ class AutogenerateDiffTest(TestCase):
     drop_table('item')
     create_table('extra',
     sa.Column('x', sa.CHAR(), nullable=True),
+    sa.Column('uid', sa.INTEGER(), nullable=True),
+    sa.ForeignKeyConstraint([uid], ['user.id'], ),
     sa.PrimaryKeyConstraint()
     )
     drop_column('address', 'street')
@@ -249,6 +253,19 @@ class AutogenerateDiffTest(TestCase):
             diff, self.autogen_context
         )
         assert not diff
+
+    def test_dont_barf_on_already_reflected(self):
+        diffs = []
+        from sqlalchemy.util import OrderedSet
+        inspector = Inspector.from_engine(self.bind)
+        autogenerate._compare_tables(
+            OrderedSet(['extra', 'user']), OrderedSet(), inspector, 
+                MetaData(), diffs, self.autogen_context
+        )
+        eq_(
+            [(rec[0], rec[1].name) for rec in diffs],
+            [('remove_table', 'extra'), ('remove_table', u'user')]
+        )
 
 class AutogenRenderTest(TestCase):
     """test individual directives"""
